tests/e2e/snapshots/test__e2e__online__moon_lsp_nodebased_lsp_help.snap
---
source: tests/e2e/online.rs
info:
  program: moon-lsp
  args:
    - +nightly-2026-01-31
    - "--help"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: No JavaScript runtime ('bun' or 'node') found for running LSP server
