tests/e2e/snapshots/test__e2e__online__moon_upgrade_intercept.snap
---
source: tests/e2e/online.rs
info:
  program: moon
  args:
    - upgrade
---
success: true
exit_code: 0
----- stdout -----
latest toolchain is not installed, run 'moonup install latest' to install
nightly toolchain is not installed, run 'moonup install nightly' to install

----- stderr -----
