tests/e2e/snapshots/test__e2e__online__moonup_default.snap
---
source: tests/e2e/online.rs
info:
  program: moonup
  args:
    - default
    - 0.1.20241231+ba15a9a4e
---
success: true
exit_code: 0
----- stdout -----
✔ Default toolchain set to version '0.1.20241231+ba15a9a4e'

----- stderr -----
