tests/e2e/snapshots/test__e2e__online__moonup_default_interactive.snap
---
source: tests/e2e/online.rs
expression: output
---
 ›
❯ 0.9.2+bbe2b338f
✔ Pick a installed version · 0.9.2+bbe2b338f
✔ Default toolchain set to version '0.9.2+bbe2b338f'
