tests/e2e/snapshots/test__e2e__online__moonup_install_interactive.snap
---
source: tests/e2e/online.rs
expression: output
---
 › [Page 1/22] 
❯ 0.9.2+bbe2b338f
  0.9.1+cd5b07232
  0.9.0+69d374a17
  0.9.0+8a8d0e4df
  0.9.0+9a9aff28a
  0.9.0+9f1423bcb
✔ Pick a version from latest channel · 0.9.2+bbe2b338f
Installing toolchain...
...
Installed toolchain version '0.9.2+bbe2b338f'
Make sure '[MOON_HOME]/bin' is added to your PATH
