tests/e2e/snapshots/test__e2e__online__moonup_install_neverexists.snap
---
source: tests/e2e/online.rs
info:
  program: moonup
  args:
    - install
    - neverexists
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
No toolchain available for requested spec 'neverexists'
